<resources>
    <string name="app_name">Calculator</string>
    <string name="calculator">Калькулятор</string>
    <string name="opened_bracket">(</string>
    <string name="closed_bracket">)</string>
    <string name="x_square">x^2 </string>
    <string name="sqrt">sqrt</string>
    <string name="percent">%</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="division">/</string>
    <string name="multiply">*</string>
    <string name="comma">,</string>
    <string name="reset">C</string>
    <string name="sign">+-</string>
    <string name="backspace">&lt;-</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="actions">Actions</string>
</resources>